--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
 
     <script>
         // Configuration
-        const names = ['Ayomide', 'Oyindamola', 'Stella'];
+        const names = ['Ayomide', 'Oyindamola'];
         let currentNameIndex = 0;
         
         // Elements
